# parallel-numbers-processing

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  lint.sh  unit_and_stress_tests.sh
project/include/: numbers_processing.h
project/lib/core/: number_processing.c
project/lib/parallel/: data_structs.h  hardware_info.c  hardware_info.h  parallel_numbers_processing.c
project/lib/serial/: serial_numbers_processing.c
project/src/: main.c
project/stress_tests/: stress_test_compare_serial_and_parallel.cpp
project/unit_tests/: unit_tests_numbers_processing.cpp
